--- a/src/config/model_config.json
+++ b/src/config/model_config.json
@@ -1,5 +1,6 @@
 {
   "seed_value": 123,
   "validation_split": 0.1,
-  "prediction_field_name": "prediction"
+  "prediction_field_name": "prediction",
+  "scenario": "decision_threshold"
 }
